# python-tdd-example

./: .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-build.yml
calculator/: calculator.py
tests/: test_calculator.py
