[metadata]
# ensure that the LICENSE file is included in the built wheels
license_file = LICENSE
license = UNLICENSE
name = tdd-example-calculator
author = John Trapp
author_email = john@johnvontrapp.com
description = A simple string-based calculator to demonstrate test driven development
long_description= file:README.rst

[options]
setup_requires =
  setuptools_scm